# ChemiSketch-v1

./: .gitignore  CMakeLists.txt
chemisketch/: CLAUDE.md  FEATURES.md  README.md
qml/: CollapsibleSection.qml  LeftSidebar.qml  Main.qml  Main_tmp.qml  PropertiesView.qml  RightPanel.qml  SketchView.qml
qml/components/: Placeholder.qml
qml/screens/: DrawScreen.qml
qml/theme/: Theme.qml
qml/views/: PropertiesView.qml  SketchView.qml
resources/: assets.qrc
src/: main.cpp
src/controllers/: CameraController.h  ChemController.cpp  ChemController.h
src/models/: Atom.cpp  Atom.h  BenzeneGenerator.cpp  BenzeneGenerator.h  Bond.cpp  Bond.h  ElementData.cpp  ElementData.h  Molecule.cpp  Molecule.h
src/utils/: ChemistryUtils.cpp  ChemistryUtils.h  FileUtils.cpp  FileUtils.h  GeometryUtils.cpp  GeometryUtils.h
